--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebStudio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
 </head>
 <body>
   <header>
     <nav>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a>
       <ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
@@ -82,6 +88,41 @@
           <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Our Portfolio</h2>
+      <ul>
+        <li>
+          <img src="./images/banking-app.JPG" alt="Banking App" width="360">
+          <h3>Banking App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/cashless-payment.JPG" alt="Cashless Payment" width="360">
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/meditation-app.JPG" alt="Meditation App" width="360">
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src="./images/taxi-service.JPG" alt="Taxi Service" width="360">
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/screen-illustrations.JPG" alt="Screen Illustrations" width="360">
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/online-courses.JPG" alt="Online Courses" width="360">
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
         </li>
       </ul>
     </section>
