--- a/index.html
+++ b/index.html
@@ -10,126 +10,125 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-</head>
 <body>
   <header>
     <nav>
       <a href="./index.html"><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a>
       <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+        <li><a class="text-for-studio" href="">Studio</a></li>
+        <li><a class="text-in-menu" href="">Portfolio</a></li>
+        <li><a class="text-in-menu" href="">Contacts</a></li>
       </ul>
     </nav>
     <address>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="text-for-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a class="text-for-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
   </header>
   <main>
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+    <section class="background-first-section">
+      <h1 class="title-header">Effective Solutions for Your Business</h1>
+      <button class="button-order" type="button">Order Service</button>
     </section>
     <section>
-      <h2>Values</h2>
+      <h2 class="no-display">Values</h2>
       <ul>
         <li>
-          <h3>Strategy</h3>
-          <p>
+          <h3 class="header-in-section">Strategy</h3>
+          <p class="descriprion-in-section">
             Our goal is to identify the business problem to walk away with the perfect and creative solution. 
           </p>
         </li>
         <li>
-          <h3>Punctuality</h3>
-          <p>
+          <h3 class="header-in-section">Punctuality</h3>
+          <p class="descriprion-in-section">
             Bring the key message to the brand's audience for the best price within the shortest possible time. 
           </p>
         </li>
         <li>
-          <h3>Diligence</h3>
-          <p>
+          <h3 class="header-in-section">Diligence</h3>
+          <p class="descriprion-in-section">
             Research and confirm brands that present the strongest digital growth opportunities and minimize risk. 
           </p>
         </li>
         <li>
-          <h3>Technologies</h3>
-          <p>
+          <h3 class="header-in-section">Technologies</h3>
+          <p class="descriprion-in-section">
             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. 
           </p>
         </li>
       </ul>
     </section>
-    <section>
-      <h2>Our Team</h2>
+    <section class="background-third-section">
+      <h2 class="section-title">Our Team</h2>
       <ul>
         <li>
           <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264">
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="header-in-section">Mark Guerrero</h3>
+          <p class="description-for-team">Product Designer</p>
         </li>
         <li>
           <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264">
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="header-in-section">Tom Ford</h3>
+          <p class="description-for-team">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264">
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="header-in-section">Camila Garcia</h3>
+          <p class="description-for-team">Marketing</p>
         </li>
         <li>
           <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="header-in-section">Daniel Wilson</h3>
+          <p class="description-for-team">UI Designer</p>
         </li>
       </ul>
     </section>
     <section>
-      <h2>Our Portfolio</h2>
+      <h2 class="section-title">Our Portfolio</h2>
       <ul>
         <li>
           <img src="./images/banking-app.JPG" alt="Banking App" width="360">
-          <h3>Banking App</h3>
-          <p>App</p>
+          <h3 class="header-in-section">Banking App</h3>
+          <p class="descriprion-in-section">App</p>
         </li>
         <li>
           <img src="./images/cashless-payment.JPG" alt="Cashless Payment" width="360">
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3 class="header-in-section">Cashless Payment</h3>
+          <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
           <img src="./images/meditation-app.JPG" alt="Meditation App" width="360">
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <h3 class="header-in-section">Meditation App</h3>
+          <p class="descriprion-in-section">App</p>
         </li>
         <li>
           <img src="./images/taxi-service.JPG" alt="Taxi Service" width="360">
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="header-in-section">Taxi Service</h3>
+          <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
           <img src="./images/screen-illustrations.JPG" alt="Screen Illustrations" width="360">
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="header-in-section">Screen Illustrations</h3>
+          <p class="descriprion-in-section">Design</p>
         </li>
         <li>
           <img src="./images/online-courses.JPG" alt="Online Courses" width="360">
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="header-in-section">Online Courses</h3>
+          <p class="descriprion-in-section">Marketing</p>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-      <a href="./index.html">WebStudio</a><br>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  <footer class="background-footer">
+      <a href="./index.html"><span class="logo-first-part">Web</span><span class="logo-second-part-footer">Studio</span></a><br>
+      <p class="description-in-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
 </html>
