--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
   <header>
     <nav>
-      <a href="./index.html"><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a>
+      <a href="./index.html" class="logo-general-settings">Web<span class="logo-second-part">Studio</span></a>
       <ul>
-        <li><a class="text-for-studio" href="">Studio</a></li>
+        <li><a href="./index.html" class="text-in-menu" href="">Studio</a></li>
         <li><a class="text-in-menu" href="">Portfolio</a></li>
         <li><a class="text-in-menu" href="">Contacts</a></li>
       </ul>
     </nav>
-    <address>
+    <address class="text-for-contact">
       <ul>
         <li>
-          <a class="text-for-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a class="text-for-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
@@ -68,22 +68,22 @@
     <section class="background-third-section">
       <h2 class="section-title">Our Team</h2>
       <ul>
-        <li>
+        <li class="background-white">
           <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264">
           <h3 class="header-in-section">Mark Guerrero</h3>
           <p class="description-for-team">Product Designer</p>
         </li>
-        <li>
+        <li class="background-white">
           <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264">
           <h3 class="header-in-section">Tom Ford</h3>
           <p class="description-for-team">Frontend Developer</p>
         </li>
-        <li>
+        <li class="background-white">
           <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264">
           <h3 class="header-in-section">Camila Garcia</h3>
           <p class="description-for-team">Marketing</p>
         </li>
-        <li>
+        <li class="background-white">
           <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
           <h3 class="header-in-section">Daniel Wilson</h3>
           <p class="description-for-team">UI Designer</p>
@@ -127,7 +127,7 @@
     </section>
   </main>
   <footer class="background-footer">
-      <a href="./index.html"><span class="logo-first-part">Web</span><span class="logo-second-part-footer">Studio</span></a><br>
+      <a href="./index.html" class="logo-general-settings">Web<span class="logo-second-part-footer">Studio</span></a><br>
       <p class="description-in-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
