--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebStudio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -15,18 +15,18 @@
     <nav>
       <a href="./index.html" class="logo-general-settings">Web<span class="logo-second-part">Studio</span></a>
       <ul>
-        <li><a href="./index.html" class="text-in-menu" href="">Studio</a></li>
+        <li><a class="text-in-menu" href="./index.html">Studio</a></li>
         <li><a class="text-in-menu" href="">Portfolio</a></li>
         <li><a class="text-in-menu" href="">Contacts</a></li>
       </ul>
     </nav>
-    <address class="text-for-contact">
+    <address class="adress-fixing">
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="text-for-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a  class="text-for-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
@@ -94,27 +94,27 @@
       <h2 class="section-title">Our Portfolio</h2>
       <ul>
         <li>
-          <img src="./images/banking-app.JPG" alt="Banking App" width="360">
+          <img src="./images/banking-app.jpg" alt="Banking App" width="360">
           <h3 class="header-in-section">Banking App</h3>
           <p class="descriprion-in-section">App</p>
         </li>
         <li>
-          <img src="./images/cashless-payment.JPG" alt="Cashless Payment" width="360">
+          <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
           <h3 class="header-in-section">Cashless Payment</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
-          <img src="./images/meditation-app.JPG" alt="Meditation App" width="360">
+          <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
           <h3 class="header-in-section">Meditation App</h3>
           <p class="descriprion-in-section">App</p>
         </li>
         <li>
-          <img src="./images/taxi-service.JPG" alt="Taxi Service" width="360">
+          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
           <h3 class="header-in-section">Taxi Service</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
-          <img src="./images/screen-illustrations.JPG" alt="Screen Illustrations" width="360">
+          <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
           <h3 class="header-in-section">Screen Illustrations</h3>
           <p class="descriprion-in-section">Design</p>
         </li>
