--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <p class="descriprion-in-section">Design</p>
         </li>
         <li>
-          <img src="./images/online-courses.JPG" alt="Online Courses" width="360">
+          <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
           <h3 class="header-in-section">Online Courses</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
