--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <section class="background-first-section">
       <h1 class="title-header">Effective Solutions for Your Business</h1>
-      <button class="button-order" type="button">Order Service</button>
+      <button class="button-fororder" type="button">Order Service</button>
     </section>
     <section>
       <h2 class="no-display">Values</h2>
@@ -126,7 +126,7 @@
       </ul>
     </section>
   </main>
-  <footer class="background-footer">
+  <footer class="background-footer" >
       <a href="./index.html" class="logo-general-settings">Web<span class="logo-second-part-footer">Studio</span></a><br>
       <p class="description-in-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
