--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
   </main>
   <footer class="background-footer" >
-      <a href="./index.html" class="logo-general-settings">Web<span class="logo-second-part-footer">Studio</span></a><br>
+      <a href="./index.html" class="logo-general-settings">Web<span class="logo-second-part-footer">Studio</span></a>
       <p class="description-in-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
