--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
           <p class="descriprion-in-section">App</p>
         </li>
         <li>
-          <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
+          <img src="./images/banking-app.jpg" alt="Cashless Payment" width="360">
           <h3 class="header-in-section">Cashless Payment</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
-          <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
+          <img src="./images/banking-app.jpg" alt="Meditation App" width="360">
           <h3 class="header-in-section">Meditation App</h3>
           <p class="descriprion-in-section">App</p>
         </li>
