--- a/index.html
+++ b/index.html
@@ -94,32 +94,32 @@
       <h2 class="section-title">Our Portfolio</h2>
       <ul>
         <li>
-          <img src="./images/banking-app.jpg" alt="Banking App" width="360">
+          <img src="./images/banking_app.jpg" alt="banking app" width="360">
           <h3 class="header-in-section">Banking App</h3>
           <p class="descriprion-in-section">App</p>
         </li>
         <li>
-          <img src="./images/banking-app.jpg" alt="Cashless Payment" width="360">
+          <img src="./images/cashless_payment.jpg" alt="cashless payment" width="360">
           <h3 class="header-in-section">Cashless Payment</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
-          <img src="./images/banking-app.jpg" alt="Meditation App" width="360">
+          <img src="./images/meditation_app.jpg" alt="meditation app" width="360">
           <h3 class="header-in-section">Meditation App</h3>
           <p class="descriprion-in-section">App</p>
         </li>
         <li>
-          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
+          <img src="./images/taxi_service.jpg" alt="taxi service" width="360">
           <h3 class="header-in-section">Taxi Service</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
         <li>
-          <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+          <img src="./images/screen_illustrations.jpg" alt="screen illustrations" width="360">
           <h3 class="header-in-section">Screen Illustrations</h3>
           <p class="descriprion-in-section">Design</p>
         </li>
         <li>
-          <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
+          <img src="./images/online_courses.jpg" alt="online courses" width="360">
           <h3 class="header-in-section">Online Courses</h3>
           <p class="descriprion-in-section">Marketing</p>
         </li>
